--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
 
         
           <div class="contact-info__block contact-info__block--center">
-           <img class="contact-info__avatar" src="C:\Program Files\Git\bulka\bulka foto.png" alt="Avatar"></div>
-
-      
-
-          <div class="contact-info__block">
+           <img class="contact-info__avatar" src="bulka foto.png" alt="Avatar"></div>
+ <div class="contact-info__block">
 <a href="" rel="author" class="contact-info__item">
   <div class="contact-info__item-icon-wrapper">
     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
