--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="contact-info__block contact-info__block--center">
         <h1 class="contact-info__header">Bulka</h1>
         <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
-       <img class="contact-info__avatar" src="bulka foto.png" alt="bulka foto.png" class="center-img"></div>
+       <img class="contact-info__avatar" src="bulka foto.png" alt="contact-info__avatar"></div>
         <div class="contact_info_container fh">
      <div class="contact-info__block">
       <a href="" rel="author" class="contact-info__item">
