--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="contact-info__block contact-info__block--center">
         <h1 class="contact-info__header">Bulka</h1>
         <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
-       <img class="contact-info__avatar" src="bulka foto.png" alt="contact-info__avatar"></div>
+       <img class="contact-info__avatar" src="bulka foto.png" alt="Avatar"></div>
         <div class="contact_info_container fh">
      <div class="contact-info__block">
-      <a href="" rel="author" class="contact-info__item">
+      <a href="styles.css" rel="author" class="contact-info__item">
         <div class="contact-info__item-icon-wrapper">
           <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
             <path
